dotnet/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dotnet-service 
spec:
  selector:
    app: my-dotnet
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
